test_suite/alan-2022-examples/failing/008560_mutation.alan
source A5 function K3a2a(] S) begin relax end begin relax end
